# aiosharp-cocoro-air

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aiosharp_cocoro_air/: __init__.py  api.py  auth.py  echonet.py  exceptions.py  models.py
tests/: conftest.py  test_api.py  test_auth.py  test_echonet.py  test_models.py
