[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiosharp-cocoro-air"
version = "0.1.0"
description = "Async Python client for the Sharp COCORO Air EU cloud API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Rafal Sokolowski"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "aioresponses>=0.7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/rsokolowski/aiosharp-cocoro-air"
Repository = "https://github.com/rsokolowski/aiosharp-cocoro-air"
Issues = "https://github.com/rsokolowski/aiosharp-cocoro-air/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
